# wf-score

./: .envrc  Cargo.toml  Dioxus.toml  README.md  flake.nix  rustfmt.toml
.cargo/: config.toml
.github/workflows/: rust.yml
bruteforce/: Cargo.toml
bruteforce/src/: main.rs  melee_riven.rs  mod_combinations.rs  riven.rs  secondary_riven.rs
single-score/: Cargo.toml
single-score/src/: main.rs
src/: error.rs  main.rs
src/path/: desktop.rs  error.rs  mod.rs  wasm.rs
wf-modifier-proc-macro/: Cargo.toml
wf-modifier-proc-macro/src/: lib.rs
wf-mods/: Cargo.toml
wf-mods/src/: lib.rs
wf-mods/src/melee/: berserker_fury.rs  blood_rush.rs  condition_overload.rs  fever_strike.rs  focus_energy.rs  focus_radon.rs  gladiator_might.rs  melee_riven.rs  mod.rs  molten_impact.rs  north_wind.rs  organ_shatter.rs  pressure_point.rs  primed_fever_strike.rs  primed_fury.rs  primed_pressure_point.rs  primed_smite_grineer.rs  sacrificial_steel.rs  shocking_touch.rs  smite_grineer.rs  vicious_frost.rs  virulent_scourge.rs  volcanic_edge.rs  voltaic_strike.rs  weeping_wounds.rs
wf-mods/src/secondary/: accelerated_isotope.rs  amalgam_barrel_diffusion.rs  anemic_agility.rs  augur_pact.rs  barrel_diffusion.rs  convulsion.rs  creeping_bullseye.rs  deep_freeze.rs  expel_grineer.rs  frostbite.rs  galvanized_crosshairs.rs  galvanized_diffusion.rs  galvanized_shot.rs  gunslinger.rs  heated_charge.rs  hollow_point.rs  hornet_strike.rs  ice_storm.rs  jolt.rs  lethal_torrent.rs  magnum_force.rs  mod.rs  pathogen_rounds.rs  pistol_gambit.rs  pistol_pestilence.rs  primed_convulsion.rs  primed_expel_grineer.rs  primed_heated_charge.rs  primed_pistol_gambit.rs  primed_target_cracker.rs  scorch.rs  secondary_riven.rs  sharpened_bullet.rs  target_cracker.rs
wf-score/: Cargo.toml
wf-score/src/: lib.rs
wf-score/src/melee/: melee_influence_dph.rs  melee_influence_dps.rs  mod.rs
wf-score/src/secondary/: cascadia_flare_dps.rs  mod.rs  raw_damage.rs
wf-stats/: Cargo.toml
wf-stats/src/: lib.rs  melee.rs  modifier.rs  secondary.rs  weapon.rs
wf-stats/src/status/: elemental.rs  mod.rs  physical.rs  primary_elemental.rs  secondary.rs  secondary_elemental.rs
