[workspace]
resolver = "2"
members = [
    "bruteforce",
    "single-score",
    "wf-modifier-proc-macro",
    "wf-mods",
    "wf-score",
    "wf-stats",
]

[workspace.package]
edition = "2024"
publish = false

[workspace.lints.rust]
unsafe_code = "forbid"

[package]
name = "app"
version = "0.1.0"
authors = ["Youn Mélois <youn@melois.dev>"]
edition.workspace = true
publish.workspace = true
license = "AGPL-3.0-or-later"

[dependencies]
dioxus = "0.6.3"

[features]
default = ["desktop"]
desktop = ["dioxus/desktop"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
