[package]
name = "single-score"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.12.1"
wf-mods = { path = "../wf-mods" }
wf-score = { path = "../wf-score" }
wf-stats = { path = "../wf-stats" }
